--- a/best_templatetags/templates/best_templatetags/test_filters.html
+++ b/best_templatetags/templates/best_templatetags/test_filters.html
@@ -5,3 +5,16 @@ basename
 With file_path = {{ file_path }}
 {% verbatim %}{{ file_path|basename }}{% endverbatim %} = {{ file_path|basename }}
 
+dirname
+=======
+
+With file_path = {{ file_path }}
+{% verbatim %}{{ file_path|dirname }}{% endverbatim %} = {{ file_path|dirname }}
+
+multiply
+========
+With val50 = 50
+{% verbatim %}{{ val50|multiply:1024 }}{% endverbatim %} = {{ val50|multiply:1024 }}
+
+With valstar = '*'
+{% verbatim %}{{ valstar|multiply:5 }}{% endverbatim %} = {{ valstar|multiply:5 }}
